<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="10dp"
    android:columnCount="2"
    tools:context="com.genius.project.passwordhelper.AddPassFragment">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/site"/>
        <EditText
            android:id="@+id/site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/addSiteHere"
            android:inputType="textUri"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_gravity="fill_horizontal"
            android:maxWidth="@dimen/fab_margin" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/login"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/addLoginHere"
            android:inputType="textWebEmailAddress"
            android:layout_marginEnd="@dimen/fab_margin"
            android:maxWidth="@dimen/fab_margin" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/pass"/>
        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/addPassHere"
            android:inputType="text"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/fab_margin"
            android:maxWidth="@dimen/fab_margin" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/info"/>

        <EditText
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/addInfoHere"
            android:inputType="textCapSentences"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/fab_margin"
            android:maxWidth="@dimen/fab_margin"
            android:maxLength="150" />
</GridLayout>