<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.genius.project.passwordhelper.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_magnify_black_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_generate"
        android:icon="@drawable/ic_key_black_48dp"
        android:title="@string/action_generate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_48dp"
        app:showAsAction="always" />
</menu>
