<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.genius.project.passwordhelper.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_action"
        android:icon="@drawable/ic_sort_variant_white_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnify_white_48dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_white_48dp"/>
</menu>
