<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/backup_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backup_save_button"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/backup_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backup_read_button"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/backup_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backup_info_button"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/backup_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backup_delete_button"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless" />
</LinearLayout>